--- a/Program2/app/views/users/show.html.erb
+++ b/Program2/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <strong>Name: </strong>
   <%= @user.Name %> <br>
   <strong>Email ID: </strong>
-  <%= @user.email_id %> <br>
+  <%= @user.email %> <br>
   <strong>Phone number: </strong>
   <%= @user.phone %><br>
 </p>
