--- a/Program2/app/views/users/index.html.erb
+++ b/Program2/app/views/users/index.html.erb
@@ -19,3 +19,5 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+
