--- a/Program2/app/views/users/show.html.erb
+++ b/Program2/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h2> Welcome to your home page!</h2>
 <p>
   <strong>Name: </strong>
-  <%= @user.Name %> <br>
+  <%= @user.name %> <br>
   <strong>Email ID: </strong>
   <%= @user.email %> <br>
   <strong>Phone number: </strong>
