--- a/Program2/app/views/companies/show.html.erb
+++ b/Program2/app/views/companies/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @company.Name %>
+  <%= @company.name %>
 </p>
 
 <%= link_to 'Edit', edit_company_path(@company) %> |
