--- a/Program2/app/views/users/index.html.erb
+++ b/Program2/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Users: Are you a job seeker or recruiter? Doesn't matter who you are</h1>
+<h1>Welcome</h1>
 
 <%-# This is the home page of the Admin. From here the admin could select the type of operation he wants to perform
 
@@ -11,42 +11,41 @@
   <tbody>
     <% @users.each do |user| %>
 
-      <% if ((user.jobseeker==false) && (user.recruiter==false)) %>
+      <% if(user.jobseeker==false && user.recruiter==false) %>
         <div class="AdminHomepage" align="center">
           <h1>Welcome Admin</h1>
-          <button class="btn btn-success">
-            <%= link_to 'Edit Profile', edit_user_path, :style =>'color:#FFFFFF;' %>
-          </button>
-            <button class="btn btn-success">
-              <%= link_to 'Create Job Seeker', new_user_path, :style =>'color:#FFFFFF;' %>
-            </button>
-          <button class="btn btn-success">
-            <%= link_to 'Create Company', new_company_path, :style =>'color:#FFFFFF;' %>
-          </button>
-          <button class="btn btn-success">
-            <%= link_to 'View Users', users_path, :style =>'color:#FFFFFF;' %>
-          </button>
-          <button class="btn btn-success">
-            <%= link_to 'View Company', companies_path, :style =>'color:#FFFFFF;' %>
-          </button>
-          <button class="btn btn-success">
-            <%= link_to 'View Jobs', jobs_path, :style =>'color:#FFFFFF;' %>
-          </button>
-          <button class="btn btn-success">
-            <%= link_to 'View Applications', applications_path, :style =>'color:#FFFFFF;' %>
-          </button>
+            <div class="btn btn-success">
+              <%= link_to 'Create Job Seeker', new_user_path, :style =>'color:#000000;' %>
+            </div>
+          <div class="btn btn-success">
+            <%= link_to 'Create Recruiter', new_user_path, :style =>'color:#000000;' %>
+          </div>
+          <div class="btn btn-success">
+            <%= link_to 'Create Company', new_company_path, :style =>'color:#000000;' %>
+          </div>
+          <div class="btn btn-success">
+            <%= link_to 'View Users', users_path, :style =>'color:#000000;' %>
+          </div>
+          <div class="btn btn-success">
+            <%= link_to 'View Company', companies_path, :style =>'color:#000000;' %>
+          </div>
+          <div class="btn btn-success">
+            <%= link_to 'View Jobs', jobs_path, :style =>'color:#000000;' %>
+          </div>
+          <div class="btn btn-success">
+            <%= link_to 'View Applications', applications_path, :style =>'color:#000000;' %>
+          </div>
         <%-#  <button class="btn btn-success"><%= link_to 'Delete Details', delete_details :style =>'color:#FFFFFF;' %><%#-</button>%>
         </div>
-      <% end %>
 
-
-      <% if (user.jobseeker==true) %>
+      <% elsif(user.jobseeker == true) %>
           <tr>
-            <td><%= user.Name %></td>
+            <td><%= user.name %></td>
             <td><%= link_to 'Show', user %></td>
             <td><%= link_to 'Edit', edit_user_path(user) %></td>
             <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
+      <% else %>
       <% end %>
     <% end %>
   </tbody>
@@ -55,5 +54,5 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
-<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+
 
